# Cadris

./: .dockerignore  .gcloudignore  .gitignore  CLAUDE.md  README.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
apps/control-plane/: .dockerignore  .env.example  Dockerfile  cUsersnovarDocumentsProjetsCadris.tmp-logstest_output.txt  migrate_add_billing.py  pyproject.toml
apps/control-plane/app/: auth.py  billing.py  cloud_auth.py  config.py  database.py  exception_handlers.py  file_search.py  main.py  migrations.py  models.py  records.py  renderer_client.py  repository.py  request_context.py  runtime_client.py  uploads.py
apps/control-plane/cadris_cp/: auth.py  billing.py  cloud_auth.py  config.py  database.py  dependencies.py  errors.py  exception_handlers.py  file_search.py  main.py  migrations.py  models.py  rate_limit.py  records.py  renderer_client.py  repository.py  runtime_client.py  uploads.py
apps/control-plane/sql/: 001_initial_schema.sql  002_runtime_foundations.sql  003_upload_inputs.sql  004_file_search_citations.sql  005_exports.sql  006_billing_user_columns.sql  007_auth_password.sql  008_mission_persistence.sql  009_qualification_questions.sql  011_export_token_hash.sql  012_fix_idempotent_alters.sql  013_artifact_sections_json.sql  014_stripe_webhook_events.sql  015_exports_token_hash_unique.sql  016_mission_interaction_count.sql
apps/control-plane/tests/: conftest.py  helpers.py  test_api.py  test_auth.py  test_auth_endpoints.py  test_billing.py  test_billing_real_session.py  test_dossier_exports.py  test_exception_handlers.py  test_interaction_cap.py  test_mission_lifecycle.py  test_path_safety.py  test_rate_limit.py  (+4 more)
apps/renderer/: .dockerignore  Dockerfile  pyproject.toml
(+527 files in other folders)
