[project]
name = "cadris-control-plane"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.116,<0.117",
  "httpx>=0.28,<0.29",
  "pydantic>=2.12,<3",
  "python-multipart>=0.0.20,<0.0.23",
  "sqlalchemy>=2.0,<2.1",
  "uvicorn>=0.35,<0.36",
  "boto3>=1.35.0,<2"
]

[tool.uvicorn]
factory = false

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.28.1"
]
