[project]
name = "cadris-renderer"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.116,<0.117",
  "pydantic>=2.12,<3",
  "uvicorn>=0.35,<0.36",
  "markdown>=3.7,<4",
  "bleach>=6.2,<7",
  "xhtml2pdf>=0.2.16,<1"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "httpx>=0.28.1"
]

